<resources>
    <string name="app_name">测试1</string>
    <string name="xieyi">点击开户注册则视为同意</string>
    <string name="xieyi2"><u>隐私权政策协议</u></string>
    <string name="time">办理时间 每日08:00-17:45</string>
    <string name="sfzready">二代身份证原件和银行卡</string>
    <string name="beizhu1">(用于办理银期关联)</string>
    <string name="open4g">打开4G/WIFI</string>
    <string name="beizhu3">准备视频（推荐使用4g）</string>
    <string name="beizhu2">拍下白纸黑字写的签名</string>
    <string name="xieyi_detial">\n最近更新日期：2019年7月8日\n\n我们（详见定义条款）系神华期货（详见定义条款）的经营者，我们尊重并保护客户隐私，在您使用神华期货服务时，我们将按照本隐私权政策收集、使用和共享您的个人信息。\n您知晓并确认您已经点击同意本隐私权政策的约定，同意我们按照本隐私权政策来合法使用和保护您的个人信息。如果您不同意或者不理解本隐私权政策的部分或全部内容，您应立即停止使用神华期货服务或者与我们联系。\n\n如果您想了解更加详尽的信息，请根据以下索引阅读相应章节：\n一、定义\n\n二、适用范围\n\n三、我们如何收集信息\n\n四、我们如何使用信息\n\n五、我们如何与第三方共享信息\n\n六、我们如何保存信息\n\n七、我们如何保护信息\n\n八、您如何管理您的信息\n\n九、免责声明及争议解决\n\n十、本隐私权政策的修订\n\n十一、您如何联系我们\n\n十二、其他\n\n十三、电子交易风险揭示书\n\n我们深知个人信息对您的重要性，并会尽全力保护您的个人信息安全可靠。我们希望通过本隐私权政策帮助您了解业务功能及对应需收集的个人信息类型，处理、保护您个人信息的规则，以及您自主管理信息的途径。同时，我们承诺，我们将按业界成熟的安全标准，采取相应的安全保护措施来保护您的个人信息。请在使用神华期货服务前，仔细阅读并了解本隐私权政策。\n一、 定义\n\n我们或神华期货：指神华期货有限公司。\n神华期货平台：指神华期货运营的官方网站或者客户端通过对接神华期货关联方或者合作机构的方式（如链接跳转H5、应用程序编程接口API、软件开发工具包SDK或者前台业务系统前置），为客户直接或间接通过神华期货信息系统查询神华期货关联方或合作机构的金融产品介绍资料和相关服务与行情，以及通过神华期货关联方或合作机构服务开展在线金融产品投资、交易及信息管理和查询、交易资金结算等活动提供信息管理以及技术支持的服务平台。\n神华期货服务：指神华期货依据本协议通过神华期货官方网站或者客户端方式向客户提供的在线信息展示与链接、交易、信息管理与技术支持服务。\n期货服务关联方：指神华期货直接控股或者间接控股的公司或受中国平安保险（集团）股份有限公司直接或间接控制或者重大影响的公司。\n神华期货合作机构或合作机构：指与神华期货签署相关合作或服务协议，同意根据协议约定并基于神华期货服务，为客户提供账户开立、产品推介与销售、在线交易、信息中介与信息管理等服务的金融机构，或其他具备相关业务许可及/或完成必要备案流程的从业机构，以及为您使用神华期货服务提供技术支持以及必要服务的其他第三方机构，包括持有证券公司、产品销售公司、银行、技术服务机构和其他第三方服务机构。\n二、 适用范围\n\n本隐私权政策适用于神华期货平台向您提供的所有服务。\n需要特别说明本隐私权政策不适用于神华期货关联方、神华期货合作机构或其他第三方向您提供的服务。神华期货平台也可能含有到其他网站的链接，我们会依据法律法规的要求采取必要措施对相关网站进行审查（包括审查网站经营者的基本资质、通过技术手段对相关网站的安全情况进行合理且初步识别、督促该等网站经营者根据法律规定保护您的个人信息安全），但我们无法保证该等链接网站的运营方会按照我们的要求采取保护措施。我们建议您查看该等网站的隐私权政策，了解他们如何处理您的信息，以便审慎决策。\n三、 我们如何收集信息\n\n您同意并授权我们在您注册、登录以及使用我们提供服务的过程中收集如下与服务相关的必要信息，但是我们将不会向您收集法律法规禁止收集的个人信息。您可以选择不提供某一或某些信息。如您选择不提供某一或某些信息，可能会导致您无法使用或无法正常使用神华期货平台的部分服务，但这不会对您使用神华期货平台的其他服务产生影响。目前，本隐私权政策仅会出于以下目的收集您的个人信息，如确需改变信息收集的目的和类型时，我们将提前告知您并重新征得您的同意。\n1、为了完成账户的创建\n当您注册成为神华期货客户时，我们会收集您的手机号码。收集手机号码是为了帮助您完成神华期货注册，保护您的账户安全。手机号码属于敏感信息，收集此类信息是为了满足相关法律法规的网络实名制要求。若您不提供这类信息，您可能无法正常使用成为我们的客户，使用我们的服务。\n2、为了开通资金账户进行交易\n当您在神华期货开通资金账户进行交易时，我们会根据监管机构要求收集您的身份信息，包括但不限于您的姓名、住址、性别、联系方式、证件有效期、证件类型、证件号码、工作类型、学历、婚姻状态、银行账户、财务状况、工作信息、征信信息等个人信息。如果您不提供上述信息或您的实名验证未通过，则无法使用神华期货对应的服务。开户过程中，我们会获取使用您设备中的录音、视频录制、相机相册、手机存储、手机设备信息等。\n3、为了更便利的登录\n您可以选择向我们提供您的指纹、面容等特征值信息进行登录，该信息属于敏感信息，拒绝提供该信息仅会使您无法在神华期货APP使用指纹和面容识别登录及支付功能，但不影响您正常使用神华期货的其他功能，您可以通过账户和密码的形式进行登录使用。\n4、为了保障账户、资金和服务安全\n当您在使用神华期货服务时，为保障您正常使用我们的服务，维护我们服务的正常运行和改进优化我们的服务体验以及保障您的账号安全，预防您的账户不被他人不法侵害，我们会收集您的设备型号、操作系统、唯一设备标识符、登陆IP地址、软件版本号、接入网络的方式、类型和状态、网络质量数据、设备加速器（如重力感应设备）、操作日志、位置信息、日历信息，这类信息是为提供服务必须收集的基础信息。\n5、为了改进服务体验、提供个性化服务功能\n为使您在神华期货的服务体验更为便捷、顺畅和有针对性，我们将收集您的风险测评信息、交易信息、行为信息（搜索记录、浏览信息、关注信息、访问时间、广告点击情况、页面点击频次、页面停留时间、与客户服务团队联系时提供的信息及参与问卷调查时发送的信息）等信息进行分析或预测，提炼个人特征模型以便将您感兴趣的产品和/或服务信息优先展示给您。例如基于您的搜索信息、关注信息向您进行特定产品或服务的消息推送，如果您不想接收我们的推送信息，您可以通过设备系统权限设置选择关闭推送功能或联系我们要求取消消息推送服务。\n此外，您在使用神华期货对应的服务时候可能需要调用或者使用您的设备功能用于收集和使用您的个人信息。当您使用服务之前，您可选择是否授权我们开通以下权限：\n1）基于摄像头（相机）的功能：您可开启摄像头进行身份校验(身份证识别以及人脸识别登录)、银行卡识别、拍照并上传图片操作以及使用视频服务；\n2）基于相册的功能：当您进行身份认证需要提交证明材料时，您可从本地相册中选择图片上传。通过开启允许访问相册功能，您还可以在平台中使用上传头像、发帖晒图服务；\n3）基于地理位置的功能：您可开启定位服务，以便神华期货、神华期货的关联方或者神华期货的合作机构更好地遵守监管规定履行反洗钱和可疑交易报送义务；\n4）基于麦克风的功能：您可选择麦克风设备来进行特定场景的语音输入与沟通（语音搜索、语音消息）或视视频对话；\n5）基于通讯录的功能：当您向您的好友推荐神华期货服务时，您可选择并导入通讯录中的联系人信息，开启该功能将避免您手动重复填写上述信息；\n6）基于指纹、面容等生物特征识别功能：您可授权调取您使用的设备的指纹验证或面容ID验证功能，帮助神华期货完成个人身份识别、登录、验证、确权、交易等指令操作。当您进行指纹验证或面容验证时，我们仅收集验证结果，并不收集您的生物特征信息；\n7）基于电话的功能：您在使用神华期货服务的过程中遇到疑难问题时可一键拨打神华期货客服电话，开启该功能将避免您手动重复填写神华期货客服电话；\n8）基于短信的功能：当您在使用神华期货服务过程中需要输入短信验证码时，开启该功能可自动读取您的短信验证码避免您手动重复填写上述信息。\n9）基于日历活动功能：当您使用投资提醒功能过程中，神华期货需要您授权访问日历并添加日历活动，如您不需要此功能，可以取消授权。\n上述功能需要您在您的设备中向我们开启您的摄像头（相机）、相册、地理位置（定位）、麦克风、通讯录、日历等功能的访问权限，以实现这些功能所涉及的信息的收集和使用。您确认并同意开启这些权限即代表您授权我们可以收集和使用这些信息来实现上述功能；您也可以遵循您使用设备的操作系统指示变更或者取消这些授权，则我们将不再继续收集和使用您的这些信息，也无法为您提供上述与这些授权所对应的功能，但这不会对您使用神华期货其他服务产生影响。\n四、我们如何使用信息\n\n为更好地向您提供服务，以及保护各方的合法权益，您同意并授权我们将您的信息用于如下用途：\n1、实现本隐私权政策中“我们如何收集信息”所述目的；\n2、为保护您的账户安全，对您的身份进行验证；\n3、为向您提供适合于您的服务，并持续维护、改善、优化这些服务，对您的个人信息进行去标识化处理后再开展分析和处理，或将您的信息用于数据建模；\n4、用于预防、发现、调查欺诈、危害安全、非法或违反与我们的协议、我们的政策或规则的行为，以保护您、我们的其他客户或我们的合法权益；\n5、对您进行投资风险承受能力评估；\n6、我们可能会将来自某项服务的去标识化处理后的个人信息与来自其他服务的去标识化处理后的个人信息结合起来，以便为您提供更优质、个性化的服务、内容和建议；\n当我们要将您的信息用于本隐私权政策未载明的其他用途或新的业务目的时，会事先告知您并征求您的同意。但根据相关法律法规及国家标准，在以下情形中，我们可能会依法收集并使用您的个人信息而无需征得您的同意：\n1、与我们履行法律法规规定的义务相关的；\n2、与国家安全、国防安全直接相关的；\n3、与公共安全、公共卫生、重大公共利益直接相关的；\n4、与犯罪侦查、起诉、审判和判决执行等直接相关的；\n5、出于维护您或他人的生命、财产等重大合法权益但又很难得到您本人同意的；\n6、所收集的个人信息是您自行向社会公众公开的；\n7、从合法公开披露的信息中收集个人信息；\n8、用于维护所提供的服务的安全稳定运行所必需的，例如：发现、处置产品或服务的故障；\n9、用于遵守并执行任何法律法规和其他对我们具有约束力的监管规定中信息收集与披露的要求。\n五、我们如何与第三方共享、转让信息\n\n我们承诺会根据相关法律法规及监管规定对您的信息承担保密义务，我们不会将您的个人信息与其他第三方进行共享或者对外转让，除非获得您明确的同意或授权。\n为了向您提供神华期货服务之目的，您同意并授权我们在下列情况下将您的个人信息与我们的关联方、神华期货合作机构进行共享。我们会要求与我们共享您的个人信息的神华期货关联方、神华期货合作机构按照本隐私权政策约定的方式存储、处理您的个人信息。在共享信息前，我们会进行商业上合理的审查，评估共享您个人信息的合法性、正当性以及必要性，并督促神华期货关联方、神华期货合作机构按照法律规定和相关监管要求来处理您的信息。神华期货关联方、神华期货合作机构在未得到您\n\n\n</string>
</resources>
